--- a/package.json
+++ b/package.json
@@ -26,7 +26,6 @@
     "datatables.net": "^1.10.22",
     "datatables.net-responsive": "^2.2.5",
     "datatables.net-select": "^1.3.1",
-    "dkfds": "^6.1.1",
     "dkfds-plugins": "^6.0.1",
     "jquery": "^3.5.1",
     "micromodal": "^0.4.6",
@@ -34,5 +33,8 @@
     "pikaday": "^1.8.0",
     "select-woo": "^1.0.1",
     "tippy.js": "^6.2.3"
+  },
+  "devDependencies": {
+    "dkfds": "^6.1.1"
   }
 }
